Added new APIs
